Fix table row border radius on small screens

--- a/web/src/pages/FilesPage.scss
+++ b/web/src/pages/FilesPage.scss
@@ -65,7 +65,7 @@
         }
 
         .size {
-          @include screen-max-small {
+          @include screen-max-large {
             border-top-right-radius: $border-radius;
             border-bottom-right-radius: $border-radius;
           }
